--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,8 @@ p {
 .firstmodule_two {
     position: relative;
     display: flex;
+    width: 900px;
+    height: 400px;
 }
 
 .firstmodule_two_play {
@@ -135,52 +137,6 @@ p {
 .egg_pic {
     position: absolute;
 }
-
-.pic0_play1 { 
-    left: 500px;
-    top: 0;
-}
-
-.pic1_play1 { 
-    left: 207px;
-    top: 154px;
-}
-
-.pic2_play1 { 
-    left: 323px;
-    top: 159px;
-}
-
-.pic3_play1 { 
-    left: 24px;
-    top: 142px;
-}
-
-.pic4_play1 { 
-    left: 306px;
-    top: 291px;
-}
-
-.pic5_play1 { 
-    left: 542px;
-    top: 60px;
-}
-
-.pic6_play1 { 
-    left: 745px;
-    top: 0;
-}
-
-.pic7_play1 { 
-    left: 55px;
-    top: 256px;
-}
-
-
-
-
-
-
 
 
 /* secondmodule */
